fix(console): change label visibility traits

--- a/src/app/pages/home/components/console/console.component.scss
+++ b/src/app/pages/home/components/console/console.component.scss
@@ -49,7 +49,8 @@
             align-items: center;
             
             .input-label {
-                display: none;
+                opacity: 0;
+                position: absolute;
             }
 
             input {
